--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "@ionic-native/core": "^5.0.7",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
-    "@ionic/angular": "^5.0.0",
-    "ion-m-lib": "0.0.20",
+    "@ionic/angular": "^5.2.2",
+    "ion-m-lib": "0.0.23",
+    "restore": "^0.3.0",
     "rxjs": "~6.5.1",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
@@ -34,10 +35,10 @@
     "@angular/compiler": "~9.1.6",
     "@angular/compiler-cli": "~9.1.6",
     "@angular/language-service": "~9.1.6",
-    "@ionic/angular-toolkit": "^2.1.1",
-    "@types/node": "^12.11.1",
+    "@ionic/angular-toolkit": "^2.2.0",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
